--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Piotr Dobiech <pitcer@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+diesel = { version = "1.4.5", features = ["sqlite"] }
+rocket = "0.4.5"
+juniper = "0.14.2"
+juniper_rocket = "0.5.2"
