Add basic team queries

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Piotr Dobiech <pitcer@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
-diesel = { version = "1.4.5", features = ["sqlite"] }
+diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
 rocket = "0.4.5"
 juniper = "0.14.2"
 juniper_rocket = "0.5.2"
+anyhow = "1.0.32"
