--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "core-js": "^3.6.5",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-apollo": "^3.0.4",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.4.3",
@@ -29,13 +29,14 @@
     "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
     "deepmerge": "^4.2.2",
-    "eslint": "^6.7.2",
+    "eslint": "^7.9.0",
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^5.0.0",
-    "sass": "^1.26.10",
+    "node-forge": "^0.10.0",
+    "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
